--- a/Assets/Resources/UITk/Themes/LetterSpellTheme.uss
+++ b/Assets/Resources/UITk/Themes/LetterSpellTheme.uss
@@ -114,7 +114,7 @@
 
 .lsp-letter-card {
     transition-property: rotate;
-    transition-duration: 1s;
+    transition-duration: 400ms;
     background-color: rgb(255, 251, 232);
     border-top-width: 10px;
     border-right-width: 10px;
