--- a/Assets/Resources/UITk/Themes/LetterSpellTheme.uss
+++ b/Assets/Resources/UITk/Themes/LetterSpellTheme.uss
@@ -26,10 +26,6 @@
 .unity-button:hover {
     background-color: rgb(220, 180, 0);
 }
-/*
-:root {
-    font-size: 64px;
-}*/
 
 .unity-label {
 }
@@ -94,7 +90,6 @@
 }
 
 .choice-button {
-    /*font-size: 75px;*/
     padding-top: 140px;
     padding-right: 100px;
     padding-bottom: 140px;
@@ -120,7 +115,6 @@
     border-right-width: 10px;
     border-bottom-width: 10px;
     border-left-width: 10px;
-    /*font-size: 130px;*/
     width: 208px;
     height: 208px;
     border-top-left-radius: 30px;
@@ -530,12 +524,60 @@
     margin-left: 80px;
 }
 
-
 .lsp-stack-view-Transition {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #02C584;
+    background-color: rgb(2, 197, 132);
+}
+
+#splashSubTitle {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    -unity-text-align: upper-center;
+    margin-top: 70px;
+    color: rgb(255, 255, 255);
+}
+
+#successPill {
+    background-color: rgb(255, 255, 255);
+    border-top-left-radius: 38px;
+    border-top-right-radius: 38px;
+    border-bottom-right-radius: 38px;
+    border-bottom-left-radius: 38px;
+    padding-right: 38px;
+    padding-left: 38px;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    -unity-font-definition: url("project://database/Assets/UI/Fonts/Inter-SemiBold.ttf?fileID=12800000&guid=3b458681b475c476ea29f3244c5c85da&type=3#Inter-SemiBold");
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+#successPillCheckmark {
+    width: 52px;
+    height: 47px;
+    background-image: url("project://database/Assets/UI/Images/Success-Check.png?fileID=2800000&guid=8eb6e6371b15149a7b6e3cd6117749c1&type=3#Success-Check");
+    margin-right: 15px;
+}
+
+.success-pill__label {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+#clueContainer {
+    align-items: center;
+    padding-top: 168px;
+    padding-bottom: 30px;
+}
+
+#clueLabel {
 }
