--- a/Assets/Resources/UITk/MainView.uxml
+++ b/Assets/Resources/UITk/MainView.uxml
@@ -3,7 +3,7 @@
     <ui:VisualElement name="root" style="flex-grow: 1;">
         <ui:VisualElement name="background" style="flex-grow: 1; position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: rgb(11, 163, 109);"/>
         <ui:VisualElement name="viewContainer" style="flex-grow: 1;">
-            <Unity.Samples.LetterSpell.StackView name="stackView" index="0" style="flex-grow: 1;">
+            <Unity.Samples.LetterSpell.StackView name="stackView" index="4" style="flex-grow: 1;">
                 <ui:VisualElement name="splashView" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/UI/Images/Splash-Screen.png?fileID=4602334432413793429&amp;guid=364b68ded9ed04f07848b6c7de25fdad&amp;type=3#Intro Screen_0&quot;);">
                     <ui:Label text="A fun spelling game" name="splashSubTitle"/>
                 </ui:VisualElement>
@@ -176,9 +176,17 @@
                                 <UnityEngine.Localization.LocalizedString property="label" table="GUID:cc1d194facb1d9d4380a9ea2032c10ca" entry="Id(19534851502080)"/>
                             </Bindings>
                         </ui:Slider>
-                        <ui:Label text="OS Settings (read-only)" class="settings-header-label"/>
+                        <ui:Label class="settings-header-label">
+                            <Bindings>
+                                <UnityEngine.Localization.LocalizedString property="text" table="GUID:cc1d194facb1d9d4380a9ea2032c10ca" entry="Id(1468861612453888)"/>
+                            </Bindings>
+                        </ui:Label>
                         <ui:VisualElement class="row unity-base-field" style="flex-grow: 1;">
-                            <ui:Label text="Closed Captions" class="unity-base-field__label"/>
+                            <ui:Label class="unity-base-field__label">
+                                <Bindings>
+                                    <UnityEngine.Localization.LocalizedString property="text" table="GUID:cc1d194facb1d9d4380a9ea2032c10ca" entry="Id(1469259735789568)"/>
+                                </Bindings>
+                            </ui:Label>
                             <ui:Label text="On" name="closedCaptionsLabel">
                                 <Bindings>
                                     <ui:DataBinding property="text" data-source-path="closedCaptionsEnabledText" binding-mode="ToTarget"/>
@@ -186,7 +194,11 @@
                             </ui:Label>
                         </ui:VisualElement>
                         <ui:VisualElement class="row unity-base-field" style="flex-grow: 1;">
-                            <ui:Label text="Bold Text" class="unity-base-field__label"/>
+                            <ui:Label text="Bold Text" class="unity-base-field__label">
+                                <Bindings>
+                                    <UnityEngine.Localization.LocalizedString property="text" table="GUID:cc1d194facb1d9d4380a9ea2032c10ca" entry="Id(1475968126578688)"/>
+                                </Bindings>
+                            </ui:Label>
                             <ui:Label text="On" name="boldTextLabel">
                                 <Bindings>
                                     <ui:DataBinding property="text" data-source-path="boldTextEnabledText" binding-mode="ToTarget"/>
@@ -194,7 +206,11 @@
                             </ui:Label>
                         </ui:VisualElement>
                         <ui:VisualElement class="row unity-base-field" style="flex-grow: 1;">
-                            <ui:Label text="Font Scale" class="unity-base-field__label"/>
+                            <ui:Label class="unity-base-field__label">
+                                <Bindings>
+                                    <UnityEngine.Localization.LocalizedString property="text" table="GUID:cc1d194facb1d9d4380a9ea2032c10ca" entry="Id(1476009310449664)"/>
+                                </Bindings>
+                            </ui:Label>
                             <ui:Label text="1.0" name="fontScaleLabel">
                                 <Bindings>
                                     <ui:DataBinding property="text" data-source-path="fontScale" binding-mode="ToTarget"/>
