--- a/Assets/Resources/UITk/MainView.uxml
+++ b/Assets/Resources/UITk/MainView.uxml
@@ -3,9 +3,13 @@
     <ui:VisualElement name="root" style="flex-grow: 1;">
         <ui:VisualElement name="background" style="flex-grow: 1; position: absolute; top: 0; left: 0; bottom: 0; right: 0; background-color: rgb(11, 163, 109);"/>
         <ui:VisualElement name="viewContainer" style="flex-grow: 1;">
-            <Unity.Samples.LetterSpell.StackView name="stackView" index="4" style="flex-grow: 1;">
+            <Unity.Samples.LetterSpell.StackView name="stackView" index="0" style="flex-grow: 1;">
                 <ui:VisualElement name="splashView" style="flex-grow: 1; background-image: url(&quot;project://database/Assets/UI/Images/Splash-Screen.png?fileID=4602334432413793429&amp;guid=364b68ded9ed04f07848b6c7de25fdad&amp;type=3#Intro Screen_0&quot;);">
-                    <ui:Label text="A fun spelling game" name="splashSubTitle"/>
+                    <ui:Label text="A fun spelling game" name="splashSubTitle">
+                        <Bindings>
+                            <UnityEngine.Localization.LocalizedString property="text" table="GUID:cc1d194facb1d9d4380a9ea2032c10ca" entry="Id(1486964262072320)"/>
+                        </Bindings>
+                    </ui:Label>
                 </ui:VisualElement>
                 <ui:VisualElement name="loginView" style="flex-grow: 1; align-items: center; justify-content: center;">
                     <ui:VisualElement name="logo" class="lsp-logo"/>
@@ -126,10 +130,11 @@
                                 </Bindings>
                             </ui:RadioButton>
                         </ui:VisualElement>
-                        <ui:Toggle label="Show Spelling Clues" name="settingsShowSpellingClues" text="On">
+                        <ui:Toggle label="Show Spelling Clues" name="settingsShowSpellingClues">
                             <Bindings>
                                 <ui:DataBinding property="value" data-source-path="showsSpellingClues" binding-mode="TwoWay"/>
                                 <UnityEngine.Localization.LocalizedString property="label" table="GUID:cc1d194facb1d9d4380a9ea2032c10ca" entry="Id(17491977990144)"/>
+                                <UnityEngine.Localization.LocalizedString property="text" table="GUID:cc1d194facb1d9d4380a9ea2032c10ca" entry="Id(1784705072656384)"/>
                             </Bindings>
                         </ui:Toggle>
                         <UnityEngine.Localization.LanguageSelection table-name="Game Text">
